// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders correctly 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  />
  <div
    class="za-nav-bar__title"
  />
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;

exports[`NavBar renders correctly with left content 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <i
      class="za-icon za-icon--default za-icon--md"
      theme="default"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M296.114 508.035c-3.22-13.597.473-28.499 11.079-39.105l333.912-333.912c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L395.504 498.47l304.574 304.574c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L307.241 528.058a41.472 41.472 0 01-11.127-20.023z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;

exports[`NavBar renders correctly with multiple icons 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <div>
      <i
        class="za-icon za-icon--default za-icon--md"
        theme="default"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1000 1000"
          width="1em"
        >
          <path
            d="M296.114 508.035c-3.22-13.597.473-28.499 11.079-39.105l333.912-333.912c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L395.504 498.47l304.574 304.574c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L307.241 528.058a41.472 41.472 0 01-11.127-20.023z"
            fill-rule="evenodd"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  >
    <div>
      <i
        class="za-icon za-icon--default za-icon--md"
        theme="default"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1000 1000"
          width="1em"
        >
          <path
            d="M711.156 508.035a41.472 41.472 0 01-11.126 20.023L366.12 861.97c-16.272 16.272-42.654 16.272-58.926 0s-16.272-42.654 0-58.926L611.767 498.47 307.241 193.944c-16.272-16.272-16.272-42.654 0-58.926 16.271-16.272 42.653-16.272 58.925 0L700.078 468.93c10.606 10.606 14.299 25.508 11.078 39.105z"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <i
        style="font-size:14px;color:var(--theme-danger);width:1em;height:1em;line-height:1em;display:inline-block"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          viewBox="0 0 37 37"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
          >
            <path
              d="M35 18.5C35 9.387 27.613 2 18.5 2S2 9.387 2 18.5 9.387 35 18.5 35 35 27.613 35 18.5z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.6"
            />
            <g
              fill="currentColor"
            >
              <path
                d="M18.103 13.793c-.61 0-1.103.494-1.103 1.104v12a1.103 1.103 0 1 0 2.207 0v-12c0-.61-.493-1.104-1.104-1.104M18.103 9.791c-.143 0-.286.033-.419.088A1.108 1.108 0 0 0 17 10.894c0 .298.12.574.32.784.11.1.22.187.364.243.408.165.894.066 1.203-.243.199-.21.32-.486.32-.784 0-.143-.033-.286-.088-.419a1.09 1.09 0 0 0-.232-.353 1.122 1.122 0 0 0-.784-.331"
              />
            </g>
          </g>
        </svg>
      </i>
    </div>
  </div>
</div>
`;

exports[`NavBar renders correctly with right content 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  >
    <i
      class="za-icon za-icon--default za-icon--md"
      theme="default"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M296.114 508.035c-3.22-13.597.473-28.499 11.079-39.105l333.912-333.912c16.271-16.272 42.653-16.272 58.925 0s16.272 42.654 0 58.926L395.504 498.47l304.574 304.574c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L307.241 528.058a41.472 41.472 0 01-11.127-20.023z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  >
    <i
      class="za-icon za-icon--default za-icon--md"
      theme="default"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1000 1000"
        width="1em"
      >
        <path
          d="M711.156 508.035a41.472 41.472 0 01-11.126 20.023L366.12 861.97c-16.272 16.272-42.654 16.272-58.926 0s-16.272-42.654 0-58.926L611.767 498.47 307.241 193.944c-16.272-16.272-16.272-42.654 0-58.926 16.271-16.272 42.653-16.272 58.925 0L700.078 468.93c10.606 10.606 14.299 25.508 11.078 39.105z"
          fill-rule="evenodd"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`NavBar renders correctly with title 1`] = `
<div
  class="za-nav-bar"
>
  <div
    class="za-nav-bar__side za-nav-bar__side--left"
  />
  <div
    class="za-nav-bar__title"
  >
    测试标题
  </div>
  <div
    class="za-nav-bar__side za-nav-bar__side--right"
  />
</div>
`;
